# RNAmotifs

./: README.md  RNAmotifs.sh  bootstrap-FDR.R  config.R
R/: RNAmaps.R  bootstrap-FDR.R  config.R  selection_of_tetramers.R
examples/: NOVA.txt
gMotifs/: CMakeLists.txt  INSTALL  README  anyoption.cpp  counting.cpp  geco_array.cpp  geco_array.h  geco_base.cpp  geco_base.h  geco_define.h  inc.cpp  inc.h  struct.h  tetramer.cpp
m3_light/: __init__.py
m3_light/config/: __init__.py
m3_light/data/: Fasta.py  __init__.py
m3_light/db/: __init__.py
m3_light/genomes/: README.txt  __init__.py  hg19.download.sh  mm9.download.sh
m3_light/regions/: __init__.py  merge_overlapping_regions.py  prepare_regions.py
m3_light/search/: __init__.py
m3_light/utils/: __init__.py
